fix(range): Set the font size to 0
This is a well-known "issue" that line-break takes space even when no other character are present, causing misalignment.

By settings the font-size to 0, nothing uses space and alignment is now correct.

--- a/src/Views/Player/Player.scss
+++ b/src/Views/Player/Player.scss
@@ -94,6 +94,7 @@
 
 .Range {
   flex: 1;
+  font-size: 0;
   position: relative;
 
   &__input {
